# ChangeLog for app-text/calibre
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.80 2010/03/28 10:34:00 zmedico Exp $

*calibre-0.6.45 (28 Mar 2010)

  28 Mar 2010; Zac Medico <zmedico@gentoo.org> +calibre-0.6.45.ebuild:
  0.6.45 version bump.

*calibre-0.6.44 (06 Mar 2010)

  06 Mar 2010; Zac Medico <zmedico@gentoo.org> +calibre-0.6.44.ebuild:
  0.6.44 version bump.

  16 Feb 2010; Zac Medico <zmedico@gentoo.org> -calibre-0.6.33.ebuild,
  -calibre-0.6.36.ebuild:
  Remove old versions.

*calibre-0.6.40 (16 Feb 2010)

  16 Feb 2010; Zac Medico <zmedico@gentoo.org> +calibre-0.6.40.ebuild:
  0.6.40 version bump.

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> calibre-0.6.33.ebuild,
  calibre-0.6.36.ebuild, calibre-0.6.37.ebuild:
  Fix poppler depend.

  06 Feb 2010; Zac Medico <zmedico@gentoo.org> calibre-0.6.37.ebuild:
  Set PYTHON_USE_WITH=sqlite to generate the python[sqlite] dep.

  06 Feb 2010; Zac Medico <zmedico@gentoo.org> calibre-0.6.37.ebuild:
  Set PYTHON_DEPEND=2:2.6, as suggested by Arfrever.

  05 Feb 2010; Zac Medico <zmedico@gentoo.org> calibre-0.6.37.ebuild:
  Don't set NEED_PYTHON and PYTHON_DEPEND at the same time.

*calibre-0.6.37 (05 Feb 2010)

  05 Feb 2010; Zac Medico <zmedico@gentoo.org> +calibre-0.6.37.ebuild:
  0.6.37 version bump.

  30 Jan 2010; Zac Medico <zmedico@gentoo.org> -calibre-0.6.24.ebuild,
  -calibre-0.6.26.ebuild, -calibre-0.6.28.ebuild, -calibre-0.6.29.ebuild,
  -calibre-0.6.31.ebuild:
  Remove old versions.

*calibre-0.6.36 (30 Jan 2010)

  30 Jan 2010; Zac Medico <zmedico@gentoo.org> +calibre-0.6.36.ebuild:
  0.6.36 version bump.

*calibre-0.6.33 (13 Jan 2010)

  13 Jan 2010; Zac Medico <zmedico@gentoo.org> +calibre-0.6.33.ebuild:
  0.6.33 version bump.

*calibre-0.6.31 (29 Dec 2009)

  29 Dec 2009; Zac Medico <zmedico@gentoo.org> +calibre-0.6.31.ebuild:
  0.6.31 version bump.

*calibre-0.6.29 (23 Dec 2009)
