@@ -4,23 +4,19 @@ Hash: SHA1
 DIST calibre-0.4.77.tar.bz2 4054837 RMD160 24c64276b2413ac8e0974f8f0caa535e8635df3c SHA1 30e39484987a606fb875c6b4afa8785fed0aa4b3 SHA256 4075d8d20713d2e5e299bc3ff51fd541474dff8576c9a6d12f4159c094d73dab
 DIST calibre-0.5.14.tar.gz 7693491 RMD160 175e473e74e036ad245db35a08e700e92d8c718d SHA1 f3241ce95fb590873427d9a9c0881f336b995aef SHA256 71caa8e0540879b851afc5b10a588279b559ee24f2f7375c10737eafd0b2f24e
 DIST calibre-0.6.11.tar.gz 8771885 RMD160 6cc9155560915a3d74314294514a6a97b077cdb9 SHA1 1068e8935318201fc0de7e52a72317c825e7817f SHA256 de71128ea76f468e56201d9940e550b61fe2691d96f1943f1905870d32907b8a
-DIST calibre-0.6.37.tar.gz 11423275 RMD160 70354735d94295787b9b5bcaaf92f6c178cd9e8e SHA1 c02aab56520dbb5c7361a0a285122699845e78c3 SHA256 97bc2def14b953a9224b1bc8055b47d4b1a30b5f3e42e1e8bec6a02b81d4af95
-DIST calibre-0.6.40.tar.gz 11420347 RMD160 7493d62eea08f7d7d6f99136b6d2c0ca6abf0bf8 SHA1 9ba8324f038e915e3ef6a08090782d3d4c3a5ee8 SHA256 5042ddd332b988edc939b985a574aacea74df8da14be0c5c33f34705080a5160
 DIST calibre-0.6.44.tar.gz 11873986 RMD160 547d49f7be8b059be995bd2366a83745ad681281 SHA1 03f1217ec12efc1f76fbc2a6d49cefd1291e3782 SHA256 00117e38062c76f675b0b978cd862c957482abe18e56f82de9557128405b125e
 DIST calibre-0.6.45.tar.gz 12085471 RMD160 1fb0fd8672c047a01673f1115c79c937e1bc2217 SHA1 63aee33b8e4cd611bf2ba9a4ccd04ec89a4cbb9a SHA256 10255cf23c6cf38ad8cb60f66af1080a62a9ba3a374e58a71ebf5c4624acf898
 EBUILD calibre-0.4.77.ebuild 2282 RMD160 3d0daa0c5740299d302be542de93b42aba01a7b5 SHA1 609941ba89bf2274b2ad776c316140563d0c7366 SHA256 76479992561158d6d7eaa7ebe117b430b8836bbe774f84ab58a7ce037b4604e3
 EBUILD calibre-0.5.14-r1.ebuild 4260 RMD160 dc4d9465d99914e4336ba4b35cd8257435769f18 SHA1 438b4b4cc28a06a7f5bdbccc70862d6810c95904 SHA256 fcc6677b0a7047ce5f377d0cef1c8927e6c70dc87205542ab942f310f6bf8b4b
 EBUILD calibre-0.6.11.ebuild 4074 RMD160 c9951c75216bddc46887edddab6c93b444c8b06c SHA1 0fa086e34ec29fe3847838ff41d1674153af96ae SHA256 f65bb03f0a5ffa3d6b896083e69f9805c3d290c0a04b8c5ff46a38b17c1ecc6b
-EBUILD calibre-0.6.37.ebuild 4467 RMD160 05ed28375fbb54daa9ee96849ead59ac069b6efb SHA1 fa6b3ee7300d81a7c428c41299fe2801b691bd81 SHA256 f3431d09f13c9dd86a0daf964fb9fa9b80c46675db70f7cad4068d7ac31f11ce
-EBUILD calibre-0.6.40.ebuild 4501 RMD160 08fd036e33ea1db8364ae4cd74fd70ae3fc228de SHA1 e8145dde6f8d1a0396bf44e6f360878610363139 SHA256 84f8b1c1b877920b9af558d9c1e1a8cd79b6148189d6492e998188cb5c3c149c
 EBUILD calibre-0.6.44.ebuild 4525 RMD160 bc77cbc495ca788432093043fb866e2c9e803481 SHA1 b73d734297b3a8a128d1f48fd2651ff39a8801b1 SHA256 e16691dde420f2a3489c75ad733a7cf987d3b8f88e53ae27b63e66322c9d2338
 EBUILD calibre-0.6.45.ebuild 4525 RMD160 2776962e1c24fefb5cf78324a21498a63715a845 SHA1 d983e131d255757cda42c22c4bd50ab587c19046 SHA256 30b751855485566756d099350c43274116f0ae603d3bbb9454a56fe69a81e213
-MISC ChangeLog 12664 RMD160 dbc56eb2ae9f7e8832239c7ef902e2f34b7e383b SHA1 581eaf819c4d8a84870c5f3c2fe5aa9d60a8bb41 SHA256 4969bc352f9bbd63ef0c02d0c9fa8b089944deeca09785101b30bfb73ed49430
+MISC ChangeLog 12785 RMD160 8541cd5f664a491aa3ed642fff595abfd1773c0a SHA1 43e929aabd281803c252302061edae35bf095890 SHA256 bba337f5e625316bbb6803682d67adb963857d47747ccbd02b772577b71f7686
 MISC metadata.xml 231 RMD160 d960211907e25a59573b7be5bb36be9b47bd4c3c SHA1 197ba481e4ddb1dd2776f589fe7339d5f0f9868f SHA256 c97fff2a7f866fcaaa116ae2b946a9422dca2d6b04c702097b02e175d0a07572
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuvMOAACgkQ/ejvha5XGaPl/ACggqooEs+04VnXJCXjoKqR+7bQ
-BK0AoMTa5Cq6fgs5QMrcRVcoYCjGVwP9
-=+paz
+iEYEARECAAYFAkuvMUcACgkQ/ejvha5XGaPF4ACfcSsMmRE1Z4LczIMAvttGtM//
+3f0Aniu6PjlD4Uu/Qzrm9hPunCjeVp39
+=1Ibr
 -----END PGP SIGNATURE-----
