@@ -1,6 +1,10 @@
 # ChangeLog for app-text/calibre
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.80 2010/03/28 10:34:00 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.81 2010/03/28 10:35:43 zmedico Exp $
+
+  28 Mar 2010; Zac Medico <zmedico@gentoo.org> -calibre-0.6.37.ebuild,
+  -calibre-0.6.40.ebuild:
+  Remove old versions.
 
 *calibre-0.6.45 (28 Mar 2010)
 
